Adjust ContentSuggestions accessibility scrolling

When the user scrolls with voice over activated, the scroll is done by
increasing the collection scroll by the height of the collection view.
As the collection is displaying the fake omnibox as an overlay, the
content hidden by the omnibox is not taken into account by the default
computation. This CL fixes it by taking it into account.

Bug: 763940
Change-Id: I3111037cbee73521096bbe9dbe264d809ac5088c
Reviewed-on: https://chromium-review.googlesource.com/660220
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501295}
Former-commit-id: e6402bf22946dc0fe10350f1987a252a70525063